# albedo

./: .env.example  .gitignore  MINING.md  README.md  chain.toml  chain_config.py  docker-compose.yml  ecosystem.config.js  env.gpu-test.template  eval.py  judge.py  llms.txt  miner.py  model_store.py  preeval.py  preeval_judge.py  pyproject.toml  schema.sql  serve_local.py  trajectory_sampler.py  tunnel.sh  validator.py
albedo/: __init__.py  backend.py  chain.py  cli.py  config.py  db.py  evaluation.py  fingerprint.py  hosts.py  judges.py  migrate.py  monitor.py  notifications.py  reign.py  remote_client.py  s3.py  sampling.py  sanity.py  sanity_gate.py  settings.py  stats.py  validation.py  weights.py
albedo/duel/: __init__.py  stream.py
albedo/eval_server/: __init__.py  endpoints.py  fingerprint_store.py  server_state.py  sink.py  vllm.py
albedo/judge/: __init__.py  client.py  rubric.py  verdict.py
albedo/models/: __init__.py  compat.py  download.py  ref.py  reveal.py  template.py  upload.py
albedo/preeval/: __init__.py  fingerprint.py  injection.py
albedo/remote/: __init__.py  common.py  eval_worker.py  sanity_worker.py
albedo/storage/: __init__.py  hippius.py  r2.py  state.py  store.py
albedo/validator/: __init__.py  admission.py  chain.py  challenge.py  faults.py  loop.py  reset.py  website.py  weights.py
archs/qwen3/: __init__.py
archs/qwen3_minicoder/: __init__.py
assets/: dataset-manifest.json
assets/tools/: openhands_tools.json
chat_to_king/: engine.py
configs/: README.md  ds_zero2.json  ds_zero3.json
docs/: MIGRATION_MAP.md  MINING.md  eval-service-status.md
pm2/: backend.config.js  ecosystem.gpu-host-tunnel.config.js  ecosystem.sanity-remote-api.config.js  gpu-eval.config.js  gpu-sanity.config.js
scripts/: build_manifest.py  cleanup_models.sh  collect_traces.py  datasets.py  deploy.sh  export_training_jsonl.py  inspect_dataset.py  manual_dedup_h2h.py  ops.py  prefetch_dataset.py  prepare_datasets.py  rescore_generated_samples.py  reset_state.py  sanity_check.py  seed_fingerprints.py  seed_genesis.py  smoke_eval.py  start_eval.sh  start_eval_remote.sh  train_sft.py  upload_challenger.py
src/albedo_eval_service/: config.py  dispatcher.py  judge_api.py  judge_config.py  judge_core.py  judge_openrouter.py  models.py  remote_api.py  remote_client.py  remote_config.py  remote_dataset.py  remote_generation.py  remote_models.py  remote_scoring.py  remote_worker.py  repository.py  score_bridge_client.py
src/chain_guard/: db.py  swap.py
src/chain_reader/: chain.py  db.py  reader.py
src/sanity_remote/: api.py  config.py  models.py  worker.py
src/sanity_service/: dataset.py  dispatcher.py  judge_panel.py  llm_check.py  prompts.json  remote_client.py  rubric.py  settings.py
tests/: test_build_manifest.py  test_dispatcher_follow.py  test_dispatcher_request.py  test_glm_category_scoring.py  test_hotkey_swap.py  test_judge_api.py  test_judge_core.py  test_judge_openrouter.py  test_remote_api.py  test_remote_dataset.py  test_remote_models.py  test_remote_scoring.py  test_remote_worker.py  test_sanity_checks.py  test_sanity_gate.py  test_score_bridge.py
website/: dashboard.example.json  index.html  llms.txt  monitor.py
website/css/: components.css  detail.css  index.css  kings.css
website/html/: detail.html  index.html  kings.html
website/js/: config.js  data.js  detail.js  fetch.js  model.js
website/js/index/: config.js  data.js  download.js  evolution.js  fetch.js  format.js  main.js  model.js  render.js
website/js/kings/: config.js  data.js  format.js  main.js  model.js  render.js
website/js/pages/: benchmark.js  detail.js  index.js
website/js/render/: benchmarks.js  heroChart.js  history.js  pipeline.js
