[project]
name = "albedo"
version = "0.1.0"
description = "Trajectory-distillation king-of-the-hill subnet — challengers duel the king on SWE-ZERO trajectories, judged by Chutes LLM-as-judge."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "bittensor>=10.3,<11",
    "boto3",
    "minio",
    "httpx",
    "numpy",
    "scipy",
    "hippius-hub",
    "huggingface-hub",
    "hf_transfer>=0.1",
    "safetensors",
    "torch",
    "transformers",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyarrow",
    "accelerate",
    "datasets",
]

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archs"]
only-include = [
    "validator.py",
    "miner.py",
    "eval.py",
    "judge.py",
    "trajectory_sampler.py",
    "model_store.py",
    "chain_config.py",
    "chain.toml",
    "archs",
    "scripts",
]

[tool.ruff]
line-length = 100
target-version = "py311"
