[project]
name = "albedo"
version = "0.1.0"
description = "Trajectory-distillation king-of-the-hill subnet (modular rewrite) — challengers duel the king on SWE-ZERO trajectories, judged by Chutes LLM-as-judge."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "bittensor>=10.3,<11",
    "boto3",
    "httpx",
    "numpy",
    "pydantic",
    "safetensors",
    "torch",
    "transformers",
    "fastapi",
    "uvicorn",
    "datasets",
    "pyarrow",
    "pandas",
    "huggingface-hub",
    "hf_transfer>=0.1",
    "hippius-hub",
]

[project.optional-dependencies]
# Miner-side SFT/RL training (scripts/train_sft.py + DeepSpeed configs in configs/).
train = ["trl", "accelerate", "deepspeed"]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The package is the `albedo/` tree; `archs/` ships the Qwen3 shim + chat templates.
packages = ["albedo", "archs"]

# chain.toml is the single source of truth and is read from the repo root at import
# time (albedo/config.py). Bundle it so non-editable installs still resolve it.
[tool.hatch.build.targets.wheel.force-include]
"chain.toml" = "chain.toml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes (F401 unused imports, F841 unused vars) to enforce the
# no-dead-code rule, I import sorting.
select = ["E", "W", "F", "I"]
